<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<RelativeLayout android:id="@+id/dialogHeader"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageView android:contentDescription="@string/Custom_Dialog_ContentDescr"
			android:id="@+id/dialogImage" android:layout_width="100dp"
			android:layout_height="100dp" android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true" android:src="@drawable/ic_launcher"
			android:layout_marginLeft="5dp" android:layout_marginTop="2dp" />

		<TextView android:id="@+id/dialogTitle" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_centerVertical="true"
			android:layout_marginLeft="16dp" android:layout_toRightOf="@+id/dialogImage"
			android:gravity="center" android:text="@string/Custom_Dialog_Title"
			android:textAppearance="?android:attr/textAppearanceLarge" />

	</RelativeLayout>

	<ScrollView android:id="@+id/scrollViewDialogMessage"
		android:cacheColorHint="#00000000" android:layout_width="fill_parent"
		android:layout_height="150dp" android:layout_alignParentLeft="true"
		android:layout_below="@+id/dialogHeader">


		<LinearLayout android:id="@+id/scrollViewDialogLinear"
			android:layout_width="fill_parent" android:layout_height="wrap_content">

			<TextView android:id="@+id/dialogMessage"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/Custom_Dialog_Message" android:textSize="18sp"
				android:padding="5dp" />

		</LinearLayout>
	</ScrollView>
	<ViewFlipper android:id="@+id/flipprActionButtons"
		android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:layout_below="@+id/scrollViewDialogMessage">


		<RelativeLayout android:id="@+id/dialogFooter"
			android:layout_width="wrap_content" android:layout_height="wrap_content">

			<Button android:id="@+id/btnYes" android:layout_width="130dp"
				android:layout_height="50dp" android:layout_alignParentLeft="true"
				android:layout_below="@+id/scrollViewDialogMessage"
				android:layout_marginLeft="5dp" android:padding="5dp"
				android:text="@string/Custom_Dialog_ButtonYes" android:textColor="@color/DarkBlue"
				android:textSize="18sp" android:textStyle="bold" />

			<Button android:id="@+id/btnNo" android:layout_width="130dp"
				android:layout_height="50dp" android:layout_below="@+id/scrollViewDialogMessage"
				android:layout_alignBaseline="@+id/btnYes"
				android:layout_alignBottom="@+id/btnYes"
				android:layout_alignParentRight="true" android:text="@string/Custom_Dialog_ButtonNo"
				android:textColor="@color/DarkBlue" android:textSize="18sp"
				android:layout_marginRight="5dp" android:padding="5dp"
				android:textStyle="bold" />
		</RelativeLayout>
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal">
			<Button android:id="@+id/btnOk" android:layout_width="130dp"
				android:layout_height="50dp" android:layout_gravity="center_vertical|center_horizontal"
				android:padding="5dp" android:text="@string/Custom_Dialog_ButtonOk"
				android:textColor="@color/DarkBlue" android:textSize="18sp"
				android:textStyle="bold" />
		</LinearLayout>
		<RelativeLayout android:id="@+id/dialogFooter"
			android:layout_width="wrap_content" android:layout_height="wrap_content">
			<Button android:id="@+id/btnICSNo"
				android:layout_alignParentLeft="true" android:layout_width="130dp"
				android:layout_height="50dp" android:layout_below="@+id/scrollViewDialogMessage"
				android:text="@string/Custom_Dialog_ButtonNo" android:textColor="@color/DarkBlue"
				android:textSize="18sp" android:layout_marginLeft="5dp"
				android:textStyle="bold" android:padding="5dp" />
			<Button android:id="@+id/btnICSYes" android:layout_width="130dp"
				android:layout_height="50dp" android:layout_below="@+id/scrollViewDialogMessage"
				android:layout_alignBaseline="@+id/btnICSNo"
				android:layout_alignBottom="@+id/btnICSNo"
				android:layout_alignParentRight="true" android:text="@string/Custom_Dialog_ButtonYes"
				android:textColor="@color/DarkBlue" android:textSize="18sp"
				android:layout_marginRight="5dp" android:padding="5dp"
				android:textStyle="bold" />
		</RelativeLayout>
	</ViewFlipper>
</RelativeLayout>